fix: scrollbar滚动 通过修改sidebar的样式g-sidebar样式类的位置
fix: scrollbar滚动 通过修改sidebar的样式g-sidebar样式类的位置

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -12,6 +12,7 @@
     bottom: 0;
     z-index: 1001;
     width: 180px !important;
+    background-color: #304156;
     transition: width .28s;
     a {
       display: inline-block;
